--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ttungbmt/filament-breezy",
+    "name": "laragis/filament-breezy",
     "description": "A custom package for Filament with login flow, profile and teams support.",
     "keywords": [
         "jeffgreco13",
